protobug/src/tui/snapshots/protobug__tui__tests__render_matches_error_layout.snap
---
source: protobug/src/tui.rs
assertion_line: 780
expression: rendered
---
┌Protobuf──────────────────────────────────────────────────┐┌JSON──────────────────────────────────┐
│timestamp {                                               ││  1 {                                 │
│  seconds: 1234567                                        ││  2   "click": {                      │
│  nanos: 123                                              ││  3     "button": "Left",             │
│}                                                         ││  4     "x": 42,                      │
│reason: "user clicked"                                    ││  5     "y": 100                      │
│click {                                                   ││  6   },                              │
│  x: 42                                                   ││  7   "reason": "user clicked",       │
└──────────────────────────────────────────────────────────┘│  8   "timestamp": {                  │
┌Hex───────────────────────────────────┐┌ASCII─────────────┐│  9     "nanos": 123,                 │
│0a 06 08 87 ad 4b 10 7b 12 0c 75 73 65││ ....K.{. use     ││ 10     "seconds": "1234567"          │
│72 20 63 6c 69 63 6b 65 64 52 04 10 2a││r clickedR..*     ││ 11   }                               │
│18 64                                 ││.d                ││ 12 }                                 │
│                                      ││                  ││                                      │
│                                      ││                  ││                                      │
│                                      ││                  ││                                      │
│                                      ││                  ││                                      │
└──────────────────────────────────────┘└──────────────────┘└──────────────────────────────────────┘
────────────────────────────────────────────────────────────────────────────────────────────────────
Parse error: expected value
